@@ -6,6 +6,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static java.util.UUID.randomUUID;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -13,6 +14,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.moj.cp.dto.CaseDetailsDto;
+import uk.gov.moj.cp.dto.CaseDetailsDto.CaseDetailsCourtScheduleDto.CaseDetailsHearingDto;
 import uk.gov.moj.cp.dto.CourtHouseDto;
 import uk.gov.moj.cp.dto.CourtScheduleDto;
 import uk.gov.moj.cp.dto.CourtHouseDto.CourtRoomDto.AddressDto;
@@ -20,6 +22,7 @@ import uk.gov.moj.cp.dto.CourtScheduleDto.HearingDto.CourtSittingDto;
 import uk.gov.moj.cp.dto.CourtScheduleDto.HearingDto;
 import uk.gov.moj.cp.dto.CourtHouseDto.CourtRoomDto;
 import uk.gov.moj.cp.metrics.TrackMyCaseMetricsService;
+import uk.gov.moj.cp.model.HearingType;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
@@ -43,199 +46,61 @@ class CaseDetailsServiceTest {
     private CaseDetailsService caseDetailsService;
     private final String accessToken = "testToken";
 
+    private String caseUrn;
+    private String courtHouseId;
+    private String courtRoomId;
+    private String judgeId;
+    private String hearingId;
+    private String pastSittingStartDate;
+    private String pastSittingEndDate;
+    private String currentSittingStartDate;
+    private String currentSittingEndDate;
+    private String futureSittingStartDate;
+    private String futureSittingEndDate;
+
+    @BeforeEach
+    void setUp(){
+        caseUrn = "CASE123";
+        courtHouseId = randomUUID().toString();
+        courtRoomId = randomUUID().toString();
+        judgeId = randomUUID().toString();
+        hearingId = randomUUID().toString();
+        pastSittingStartDate = LocalDateTime.now().minusDays(1).toString();
+        pastSittingEndDate = LocalDateTime.now().minusDays(1).plusHours(2).toString();
+        currentSittingStartDate = LocalDateTime.now().toString();
+        currentSittingEndDate = LocalDateTime.now().toString();
+        futureSittingStartDate = LocalDateTime.now().plusDays(1).toString();
+        futureSittingEndDate = LocalDateTime.now().plusDays(1).plusHours(2).toString();
+    }
 
     @Test
     @DisplayName("includes hearings when sitting date is in the future")
     void testGetCaseDetailsByCaseUrnWithValidHearingScheduleDetailsForFutureSittingDate() {
-        final String caseUrn = "CASE123";
-        final String courtHouseId = randomUUID().toString();
-        final String courtRoomId = randomUUID().toString();
-        final String judgeId = randomUUID().toString();
-        final String hearingId = randomUUID().toString();
-        final String sittingStartDate = LocalDateTime.now().plusDays(1).toString();
-        final String sittingEndDate = LocalDateTime.now().plusDays(1).plusHours(2).toString();
-
-        final CourtSittingDto sittingDto = new CourtSittingDto(
-                sittingStartDate,
-                sittingEndDate,
-                judgeId,
-                courtHouseId,
-                courtRoomId
-        );
-
-        final HearingDto hearingDto = new HearingDto(
-                hearingId,
-                "First Hearing",
-                "First Hearing",
-                "Note1",
-                List.of(sittingDto)
-        );
+        final List<CourtSittingDto> futureCourtSittings = List.of(createCourtSitting(futureSittingStartDate, futureSittingEndDate));
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), futureCourtSittings);
 
         final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
 
         final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
         final AddressDto addressDto = new AddressDto("53", "Court Street",
-                "London", null, "CB4 3MX", null);
+                                                     "London", null, "CB4 3MX", null);
 
-        final CourtHouseDto courtHouseDto = new CourtHouseDto(
-                courtHouseId,
-                courtRoomId,
-                "CROWN",
-                "123",
-                "Lavender Hill",
-                addressDto,
-                Arrays.asList(courtRoomDto)
-        );
-
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
         when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
-        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(courtHouseDto);
         when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
 
-        CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
         assertEquals(caseUrn, caseDetails.caseUrn());
         assertEquals(1, caseDetails.courtSchedule().size());
 
-        var caseHearingDetails = caseDetails.courtSchedule().get(0).hearings().get(0);
+        var caseHearingDetails = caseDetails.courtSchedule().getFirst().hearings().getFirst();
         assertEquals(hearingId, caseHearingDetails.hearingId());
-        assertEquals("First Hearing", caseHearingDetails.hearingType());
-        assertEquals("First Hearing", caseHearingDetails.hearingDescription());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingType());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingDescription());
         assertEquals("Note1", caseHearingDetails.listNote());
 
-        var schedule = caseHearingDetails.courtSittings().get(0);
-        assertEquals(judgeId, schedule.judiciaryId());
-        assertEquals(courtHouseId, schedule.courtHouse().courtHouseId());
-        assertEquals(courtRoomId, schedule.courtHouse().courtRoomId());
-        assertEquals(sittingStartDate, schedule.sittingStart());
-        assertEquals(sittingEndDate, schedule.sittingEnd());
-
-        assertEquals("53", schedule.courtHouse().address().address1());
-        assertEquals("Court Street", schedule.courtHouse().address().address2());
-        assertEquals("London", schedule.courtHouse().address().address3());
-
-        assertEquals(123, schedule.courtHouse().courtRoomDtoList().get(0).courtRoomId());
-        assertEquals("CourtRoom 01", schedule.courtHouse().courtRoomDtoList().get(0).courtRoomName());
-
-        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
-    }
-
-
-    @Test
-    @DisplayName("excludes hearings when  sittings are  in the past")
-    void testGetCaseDetailsByCaseUrnWithEmptyHearingScheduleDetailsForPastSittingDate() {
-        final String caseUrn = "CASE123";
-        final String sittingStartDate = LocalDateTime.now().minusDays(1).toString();
-        final String sittingEndDate = LocalDateTime.now().minusDays(1).plusHours(2).toString();
-
-        final CourtSittingDto sittingDto = new CourtSittingDto(
-                sittingStartDate,
-                sittingEndDate,
-                randomUUID().toString(),
-                randomUUID().toString(),
-                randomUUID().toString()
-        );
-
-        final HearingDto hearingDto = new HearingDto(
-                randomUUID().toString(),
-                "First Hearing",
-                "First Hearing",
-                "Note1",
-                List.of(sittingDto)
-        );
-
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
-        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
-
-        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
-
-        CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
-
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(0, caseDetails.courtSchedule().get(0).hearings().size());
-
-        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
-    }
-
-
-    @Test
-    @DisplayName("includes only hearings that have at least one future sitting")
-    void testGetCaseDetailsByCaseUrnWithValidHearingScheduleFutureAndPastSittingDateCombined() {
-        final String caseUrn = "CASE123";
-        final String courtHouseId = randomUUID().toString();
-        final String courtRoomId = randomUUID().toString();
-        final String judgeId = randomUUID().toString();
-        final String hearingId = randomUUID().toString();
-        final String futureSittingStartDate = LocalDateTime.now().plusDays(1).toString();
-        final String futureSittingEndDate = LocalDateTime.now().plusDays(1).plusHours(2).toString();
-        final String pastSittingStartDate = LocalDateTime.now().minusDays(1).toString();
-        final String pastSittingEndDate = LocalDateTime.now().minusDays(1).plusHours(2).toString();
-
-        final CourtSittingDto futureSittingDto = new CourtSittingDto(
-                futureSittingStartDate,
-                futureSittingEndDate,
-                judgeId,
-                courtHouseId,
-                courtRoomId
-        );
-
-        final HearingDto hearingDto = new HearingDto(
-                hearingId,
-                "First Hearing",
-                "First Hearing",
-                "Note1",
-                List.of(futureSittingDto)
-        );
-
-        final CourtSittingDto pastSittingDto = new CourtSittingDto(
-                pastSittingStartDate,
-                pastSittingEndDate,
-                judgeId,
-                courtHouseId,
-                courtRoomId
-        );
-        final HearingDto hearingDto1 = new HearingDto(
-                hearingId,
-                "First Hearing",
-                "First Hearing",
-                "Note1",
-                List.of(pastSittingDto)
-        );
-
-
-        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1));
-
-        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
-        final AddressDto addressDto = new AddressDto("53", "Court Street",
-                "London", null, "CB4 3MX", null);
-
-        final CourtHouseDto courtHouseDto = new CourtHouseDto(
-                courtHouseId,
-                courtRoomId,
-                "CROWN",
-                "123",
-                "Lavender Hill",
-                addressDto,
-                Arrays.asList(courtRoomDto)
-        );
-
-        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
-        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
-        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(courtHouseDto);
-
-        CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
-
-        assertEquals(caseUrn, caseDetails.caseUrn());
-        assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().get(0).hearings().size());
-
-        var caseHearingDetails = caseDetails.courtSchedule().get(0).hearings().get(0);
-        assertEquals(hearingId, caseHearingDetails.hearingId());
-        assertEquals("First Hearing", caseHearingDetails.hearingType());
-        assertEquals("First Hearing", caseHearingDetails.hearingDescription());
-        assertEquals("Note1", caseHearingDetails.listNote());
-
-        var schedule = caseHearingDetails.courtSittings().get(0);
+        var schedule = caseHearingDetails.courtSittings().getFirst();
         assertEquals(judgeId, schedule.judiciaryId());
         assertEquals(courtHouseId, schedule.courtHouse().courtHouseId());
         assertEquals(courtRoomId, schedule.courtHouse().courtRoomId());
@@ -246,151 +111,161 @@ class CaseDetailsServiceTest {
         assertEquals("Court Street", schedule.courtHouse().address().address2());
         assertEquals("London", schedule.courtHouse().address().address3());
 
-        assertEquals(123, schedule.courtHouse().courtRoomDtoList().get(0).courtRoomId());
-        assertEquals("CourtRoom 01", schedule.courtHouse().courtRoomDtoList().get(0).courtRoomName());
+        assertEquals(123, schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomId());
+        assertEquals("CourtRoom 01", schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomName());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
 
 
     @Test
-    @DisplayName("includes hearings when sitting date is today")
-    void testGetCaseDetailsByCaseUrnWithValidMultipleHearingScheduleForFutureSittingDate() {
-        final String caseUrn = "CASE123";
-        final String courtHouseId = randomUUID().toString();
-        final String courtRoomId = randomUUID().toString();
-        final String judgeId = randomUUID().toString();
-        final String hearingId = randomUUID().toString();
-        final String todayStartDate = LocalDateTime.now().toString();
-        final String todayEndDate = LocalDateTime.now().plusHours(2).toString();
-
-
-        final CourtSittingDto todaySittingDto = new CourtSittingDto(
-                todayStartDate,
-                todayEndDate,
-                judgeId,
-                courtHouseId,
-                courtRoomId
-        );
-
-        final HearingDto hearingDto = new HearingDto(
-                hearingId,
-                "First Hearing",
-                "First Hearing",
-                "Note1",
-                List.of(todaySittingDto)
-        );
+    @DisplayName("excludes hearings when sittings are in the past")
+    void testGetCaseDetailsByCaseUrnWithEmptyHearingScheduleDetailsForPastSittingDate() {
+        final List<CourtSittingDto> pastCourtSittings = List.of(createCourtSitting(pastSittingStartDate, pastSittingEndDate));
+        final HearingDto hearingDto = createHearing(HearingType.SENTENCE.getValue(), pastCourtSittings);
 
         final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
-
-        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
-        final AddressDto addressDto = new AddressDto("53", "Court Street",
-                "London", null, "CB4 3MX", null);
-
-        final CourtHouseDto courtHouseDto = new CourtHouseDto(
-                courtHouseId,
-                courtRoomId,
-                "CROWN",
-                "123",
-                "Lavender Hill",
-                addressDto,
-                Arrays.asList(courtRoomDto)
-        );
         when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
 
         when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
-        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(courtHouseDto);
 
-        CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
         assertEquals(caseUrn, caseDetails.caseUrn());
         assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().get(0).hearings().size());
+        assertEquals(0, caseDetails.courtSchedule().getFirst().hearings().size());
 
-        var caseHearingDetails = caseDetails.courtSchedule().get(0).hearings().get(0);
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+
+    @Test
+    @DisplayName("includes only hearings that have at least one future sitting")
+    void testGetCaseDetailsByCaseUrnWithValidHearingScheduleFutureAndPastSittingDateCombined() {
+        final List<CourtSittingDto> futureCourtSittings = List.of(createCourtSitting(futureSittingStartDate, futureSittingEndDate));
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), futureCourtSittings);
+
+        List<CourtSittingDto> pastCourtSittings = List.of(createCourtSitting(pastSittingStartDate, pastSittingEndDate));
+        final HearingDto hearingDto1 = createHearing(HearingType.TRIAL.getValue(), pastCourtSittings);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1));
+
+        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
+        final AddressDto addressDto = new AddressDto("53", "Court Street",
+                                                     "London", null, "CB4 3MX", null);
+
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+
+        var caseHearingDetails = caseDetails.courtSchedule().getFirst().hearings().getFirst();
         assertEquals(hearingId, caseHearingDetails.hearingId());
-        assertEquals("First Hearing", caseHearingDetails.hearingType());
-        assertEquals("First Hearing", caseHearingDetails.hearingDescription());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingType());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingDescription());
         assertEquals("Note1", caseHearingDetails.listNote());
 
-        var schedule = caseHearingDetails.courtSittings().get(0);
+        var schedule = caseHearingDetails.courtSittings().getFirst();
         assertEquals(judgeId, schedule.judiciaryId());
         assertEquals(courtHouseId, schedule.courtHouse().courtHouseId());
         assertEquals(courtRoomId, schedule.courtHouse().courtRoomId());
-        assertEquals(todayStartDate, schedule.sittingStart());
-        assertEquals(todayEndDate, schedule.sittingEnd());
+        assertEquals(futureSittingStartDate, schedule.sittingStart());
+        assertEquals(futureSittingEndDate, schedule.sittingEnd());
 
         assertEquals("53", schedule.courtHouse().address().address1());
         assertEquals("Court Street", schedule.courtHouse().address().address2());
         assertEquals("London", schedule.courtHouse().address().address3());
 
-        assertEquals(123, schedule.courtHouse().courtRoomDtoList().get(0).courtRoomId());
-        assertEquals("CourtRoom 01", schedule.courtHouse().courtRoomDtoList().get(0).courtRoomName());
+        assertEquals(123, schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomId());
+        assertEquals("CourtRoom 01", schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomName());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+
+    @Test
+    @DisplayName("includes hearings when sitting date is current date")
+    void testGetCaseDetailsByCaseUrnWithValidHearingScheduleDetailsForCurrentDate() {
+        final List<CourtSittingDto> currentCourtSittings =  List.of(createCourtSitting(currentSittingStartDate, currentSittingEndDate));
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), currentCourtSittings);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+
+        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
+        final AddressDto addressDto = new AddressDto("53", "Court Street",
+                                                     "London", null, "CB4 3MX", null);
+
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+
+        var caseHearingDetails = caseDetails.courtSchedule().getFirst().hearings().getFirst();
+        assertEquals(hearingId, caseHearingDetails.hearingId());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingType());
+        assertEquals(HearingType.TRIAL.getValue(), caseHearingDetails.hearingDescription());
+        assertEquals("Note1", caseHearingDetails.listNote());
+
+        var schedule = caseHearingDetails.courtSittings().getFirst();
+        assertEquals(judgeId, schedule.judiciaryId());
+        assertEquals(courtHouseId, schedule.courtHouse().courtHouseId());
+        assertEquals(courtRoomId, schedule.courtHouse().courtRoomId());
+        assertEquals(currentSittingStartDate, schedule.sittingStart());
+        assertEquals(currentSittingEndDate, schedule.sittingEnd());
+
+        assertEquals("53", schedule.courtHouse().address().address1());
+        assertEquals("Court Street", schedule.courtHouse().address().address2());
+        assertEquals("London", schedule.courtHouse().address().address3());
+
+        assertEquals(123, schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomId());
+        assertEquals("CourtRoom 01", schedule.courtHouse().courtRoomDtoList().getFirst().courtRoomName());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
     }
 
     @Test
     @DisplayName("includes hearings when sitting date is today, but before now")
-    void testGetCaseDetailsByCaseUrnWithValidMultipleHearingScheduleForFutureSittingDateBeforeNow() {
-        final String caseUrn = "CASE123";
-        final String courtHouseId = randomUUID().toString();
-        final String courtRoomId = randomUUID().toString();
-        final String judgeId = randomUUID().toString();
-        final String hearingId = randomUUID().toString();
+    void testGetCaseDetailsByCaseUrnWithValidHearingScheduleDetailsForCurrentDateButBeforeCurrentTime() {
         final String todayStartDate = LocalDateTime.now().minusHours(2).toString();
         final String todayEndDate = LocalDateTime.now().minusHours(1).toString();
 
-
-        final CourtSittingDto todaySittingDto = new CourtSittingDto(
-                todayStartDate,
-                todayEndDate,
-                judgeId,
-                courtHouseId,
-                courtRoomId
-        );
-
-        final HearingDto hearingDto = new HearingDto(
-                hearingId,
-                "First Hearing",
-                "First Hearing",
-                "Note1",
-                List.of(todaySittingDto)
-        );
+        final List<CourtSittingDto> courtSittings =  List.of(createCourtSitting(todayStartDate, todayEndDate));
+        final HearingDto hearingDto = createHearing(HearingType.SENTENCE.getValue(), courtSittings);
 
         final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
 
         final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
         final AddressDto addressDto = new AddressDto("53", "Court Street",
-                "London", null, "CB4 3MX", null);
+                                                     "London", null, "CB4 3MX", null);
 
-        final CourtHouseDto courtHouseDto = new CourtHouseDto(
-                courtHouseId,
-                courtRoomId,
-                "CROWN",
-                "123",
-                "Lavender Hill",
-                addressDto,
-                Arrays.asList(courtRoomDto)
-        );
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
         when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
-
         when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
-        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(courtHouseDto);
 
-        CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
 
         assertEquals(caseUrn, caseDetails.caseUrn());
         assertEquals(1, caseDetails.courtSchedule().size());
-        assertEquals(1, caseDetails.courtSchedule().get(0).hearings().size());
+        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
 
-        var caseHearingDetails = caseDetails.courtSchedule().get(0).hearings().get(0);
+        var caseHearingDetails = caseDetails.courtSchedule().getFirst().hearings().getFirst();
         assertEquals(hearingId, caseHearingDetails.hearingId());
-        assertEquals("First Hearing", caseHearingDetails.hearingType());
-        assertEquals("First Hearing", caseHearingDetails.hearingDescription());
+        assertEquals(HearingType.SENTENCE.getValue(), caseHearingDetails.hearingType());
+        assertEquals(HearingType.SENTENCE.getValue(), caseHearingDetails.hearingDescription());
         assertEquals("Note1", caseHearingDetails.listNote());
 
-        var schedule = caseHearingDetails.courtSittings().get(0);
+        var schedule = caseHearingDetails.courtSittings().getFirst();
         assertEquals(judgeId, schedule.judiciaryId());
         assertEquals(courtHouseId, schedule.courtHouse().courtHouseId());
         assertEquals(courtRoomId, schedule.courtHouse().courtRoomId());
@@ -405,5 +280,368 @@ class CaseDetailsServiceTest {
         assertEquals("CourtRoom 01", schedule.courtHouse().courtRoomDtoList().get(0).courtRoomName());
 
         verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+    @Test
+    @DisplayName("includes only hearings that have at least one future sitting")
+    void testGetCaseDetailsByCaseUrnWithValidMultipleHearingSchedule() {
+        final List<CourtSittingDto> futureCourtSittings =  List.of(createCourtSitting(futureSittingStartDate, futureSittingEndDate));
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), futureCourtSittings);
+
+        List<CourtSittingDto> currentCourtSittings =   List.of(createCourtSitting(currentSittingStartDate, currentSittingEndDate));
+        final HearingDto hearingDto1 = createHearing(HearingType.SENTENCE.getValue(), currentCourtSittings);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1));
+
+        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
+        final AddressDto addressDto = new AddressDto("53", "Court Street",
+                                                     "London", null, "CB4 3MX", null);
+
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(2, caseDetails.courtSchedule().getFirst().hearings().size());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+    @Test
+    @DisplayName("should not includes  hearings that have only past sitting")
+    void testGetCaseDetailsByCaseUrnWithNoHearingScheduleWithMultipleHearingWithPastSittings() {
+        final List<CourtSittingDto> pastCourtSittings =  List.of(createCourtSitting(pastSittingStartDate, pastSittingEndDate));
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), pastCourtSittings);
+        final HearingDto hearingDto1 = createHearing(HearingType.SENTENCE.getValue(), pastCourtSittings);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1));
+
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(0, caseDetails.courtSchedule().getFirst().hearings().size());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+    @DisplayName("should  includes  hearings that have only future sitting and should not include hearing that has past sitting")
+    void testGetCaseDetailsByCaseUrnWithHearingScheduleWithMultipleHearingWithPastAndFutureHearing() {
+        final List<CourtSittingDto> pastCourtSittings =  List.of(createCourtSitting(pastSittingStartDate, pastSittingEndDate));
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), pastCourtSittings);
+
+        final List<CourtSittingDto> futureCourtSittings =  List.of(createCourtSitting(futureSittingStartDate, futureSittingEndDate));
+        final HearingDto hearingDto1 = createHearing(HearingType.TRIAL.getValue(), futureCourtSittings);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1));
+
+        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
+        final AddressDto addressDto = new AddressDto("53", "Court Street",
+                                                     "London", null, "CB4 3MX", null);
+
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+    @Test
+    @DisplayName("includes only hearings that multiday hearing with current and future date sittings")
+    void testGetCaseDetailsByCaseUrnWithValidMultiDayHearingScheduleWithCurrentAndFutureSitting() {
+        final CourtSittingDto futureSittingDto = createCourtSitting(futureSittingStartDate, futureSittingEndDate);
+        final CourtSittingDto currentSittingDto = createCourtSitting(currentSittingStartDate, currentSittingEndDate);
+
+        final List<CourtSittingDto> courtSittings =  List.of(futureSittingDto, currentSittingDto);
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), courtSittings);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+
+        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
+        final AddressDto addressDto = new AddressDto("53", "Court Street",
+                                                     "London", null, "CB4 3MX", null);
+
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(2, caseDetails.courtSchedule().getFirst().hearings().getFirst().courtSittings().size());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+    @Test
+    @DisplayName("includes only hearings that multiday hearing with future date sittings")
+    void testGetCaseDetailsByCaseUrnWithValidMultiDayHearingScheduleWithPastAndFutureSitting() {
+        final CourtSittingDto futureSittingDto = createCourtSitting(futureSittingStartDate, futureSittingEndDate);
+        final List<CourtSittingDto> futureCourtSittings =  List.of(futureSittingDto, futureSittingDto);
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), futureCourtSittings);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+
+        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
+        final AddressDto addressDto = new AddressDto("53", "Court Street",
+                                                     "London", null, "CB4 3MX", null);
+
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(2, caseDetails.courtSchedule().getFirst().hearings().getFirst().courtSittings().size());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+    @Test
+    @DisplayName("includes only hearings that multiday hearing with past date sittings")
+    void testGetCaseDetailsByCaseUrnWithNoHearingScheduleWithPastMultiDaySitting() {
+        final CourtSittingDto pastSittingDto = createCourtSitting(pastSittingStartDate, pastSittingEndDate);
+
+        final List<CourtSittingDto> pastCourtSittings =  List.of(pastSittingDto, pastSittingDto);
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), pastCourtSittings);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(0, caseDetails.courtSchedule().getFirst().hearings().size());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+    @Test
+    @DisplayName("includes only hearings that multiday hearing with past and future date sittings")
+    void testGetCaseDetailsByCaseUrnWithMultiDayHearingScheduleWithPastAndFutureSitting() {
+        final CourtSittingDto pastSittingDto = createCourtSitting(pastSittingStartDate, pastSittingEndDate);
+        final CourtSittingDto futureSittingDto = createCourtSitting(futureSittingStartDate, futureSittingEndDate);
+
+        final List<CourtSittingDto> courtSittings =   List.of(pastSittingDto, futureSittingDto);
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), courtSittings);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto));
+
+        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
+        final AddressDto addressDto = new AddressDto("53", "Court Street",
+                                                     "London", null, "CB4 3MX", null);
+
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(1, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(2, caseDetails.courtSchedule().getFirst().hearings().getFirst().courtSittings().size());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+
+    @Test
+    @DisplayName("includes only hearings that have at least one future sitting")
+    void testGetCaseDetailsByCaseUrnWithHearingScheduleWithMultipleHearingOneWithSingleDayAndAnotherWithMultiDay() {
+        final List<CourtSittingDto> futureCourtSittings =  List.of(createCourtSitting(futureSittingStartDate, futureSittingEndDate));
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), futureCourtSittings);
+
+
+        final List<CourtSittingDto> pastAndFutureCourtSittings =  List.of(createCourtSitting(pastSittingStartDate, pastSittingEndDate),
+                                                              createCourtSitting(futureSittingStartDate, futureSittingEndDate));
+        final HearingDto hearingDto1 = createHearing(HearingType.SENTENCE.getValue(), pastAndFutureCourtSittings);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1));
+
+        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
+        final AddressDto addressDto = new AddressDto("53", "Court Street",
+                                                     "London", null, "CB4 3MX", null);
+
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(2, caseDetails.courtSchedule().getFirst().hearings().size());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+    @Test
+    @DisplayName("includes hearing of types Trial or SENTENCE")
+    void testGetCaseDetailsByCaseUrnWithHearingScheduleWithHearingTypeSSENTENCEOrTrial() {
+        final CourtSittingDto futureSittingDto = createCourtSitting(futureSittingStartDate, futureSittingEndDate);
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), List.of(futureSittingDto));
+        final HearingDto hearingDto1 = createHearing(HearingType.SENTENCE.getValue(), List.of(futureSittingDto));
+        final HearingDto hearingDto2 = createHearing("Invalid Type", List.of(futureSittingDto));
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1, hearingDto2));
+
+        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
+        final AddressDto addressDto = new AddressDto("53", "Court Street",
+                                                     "London", null, "CB4 3MX", null);
+
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(2, caseDetails.courtSchedule().getFirst().hearings().size());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+
+    @Test
+    @DisplayName("includes hearing of types Trial or SSENTENCE")
+    void testGetCaseDetailsByCaseUrnWithHearingScheduleInSortedOrderOfSittingDate() {
+        final CourtSittingDto futureSittingDto1 = createCourtSitting(futureSittingStartDate, futureSittingEndDate);
+        final List<CourtSittingDto> courtSittings1 =   List.of(futureSittingDto1);
+        final HearingDto hearingDto = createHearing(HearingType.TRIAL.getValue(), courtSittings1);
+
+        final CourtSittingDto futureSittingDto2 = createCourtSitting(LocalDateTime.now().toString(), LocalDateTime.now().plusHours(2).toString());
+        final List<CourtSittingDto> courtSittings2 =   List.of(futureSittingDto2);
+        final HearingDto hearingDto1 = createHearing(HearingType.SENTENCE.getValue(), courtSittings2);
+
+        final HearingDto hearingDto2 = createHearing("Invalid Type", courtSittings1);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto, hearingDto1, hearingDto2));
+
+        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
+        final AddressDto addressDto = new AddressDto("53", "Court Street",
+                                                     "London", null, "CB4 3MX", null);
+
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        assertEquals(2, caseDetails.courtSchedule().getFirst().hearings().size());
+        assertEquals(HearingType.SENTENCE.getValue(), caseDetails.courtSchedule().getFirst().hearings().getFirst().hearingType());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+    @Test
+    @DisplayName("includes hearing of types Trial or SENTENCE")
+    void testGetCaseDetailsByCaseUrnWithHearingScheduleInSortedOrderOfSittingDateAndHearingType() {
+        final CourtSittingDto currentSittingDto = createCourtSitting(currentSittingStartDate, currentSittingEndDate);
+        final List<CourtSittingDto> courtSittings =   List.of(currentSittingDto);
+
+        final HearingDto hearingDto1 = createHearing("1", HearingType.SENTENCE.getValue(), courtSittings);
+        final HearingDto hearingDto2  = createHearing("2", HearingType.SENTENCE.getValue(), courtSittings);
+        final HearingDto hearingDto3 = createHearing("3", HearingType.TRIAL.getValue(), courtSittings);
+        final HearingDto hearingDto4 = createHearing("4", HearingType.TRIAL.getValue(), courtSittings);
+        final HearingDto hearingDto5 = createHearing("Invalid Type", courtSittings);
+
+        final CourtScheduleDto scheduleDto = new CourtScheduleDto(List.of(hearingDto1, hearingDto3, hearingDto2, hearingDto4, hearingDto5));
+
+        final CourtRoomDto courtRoomDto = new CourtRoomDto(123, "CourtRoom 01");
+        final AddressDto addressDto = new AddressDto("53", "Court Street",
+                                                     "London", null, "CB4 3MX", null);
+
+        when(courtHouseService.getCourtHouseById(any(), any(), any())).thenReturn(createCourtHouse(courtRoomDto, addressDto));
+        when(oauthTokenService.getJwtToken()).thenReturn(accessToken);
+        when(courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn)).thenReturn(List.of(scheduleDto));
+
+        final CaseDetailsDto caseDetails = caseDetailsService.getCaseDetailsByCaseUrn(caseUrn);
+
+        assertEquals(caseUrn, caseDetails.caseUrn());
+        assertEquals(1, caseDetails.courtSchedule().size());
+        List<CaseDetailsHearingDto> hearings = caseDetails.courtSchedule().getFirst().hearings();
+        assertEquals(4, hearings.size());
+
+        assertEquals(HearingType.TRIAL.getValue(), hearings.get(0).hearingType());
+        assertEquals("3", hearings.get(0).hearingId());
+
+        assertEquals(HearingType.TRIAL.getValue(), hearings.get(1).hearingType());
+        assertEquals("4", hearings.get(1).hearingId());
+
+        assertEquals(HearingType.SENTENCE.getValue(), hearings.get(2).hearingType());
+        assertEquals("1", hearings.get(2).hearingId());
+
+        assertEquals(HearingType.SENTENCE.getValue(), hearings.get(3).hearingType());
+        assertEquals("2", hearings.get(3).hearingId());
+
+        verify(trackMyCaseMetricsService).incrementCaseDetailsCount(caseUrn);
+    }
+
+
+    private CourtSittingDto createCourtSitting(final  String sittingStartDate, final String sittingEndDate){
+
+        return new CourtSittingDto(
+            sittingStartDate,
+            sittingEndDate,
+            judgeId,
+            courtHouseId,
+            courtRoomId
+        );
+    }
+
+    private CourtHouseDto createCourtHouse(final CourtRoomDto courtRoomDto, final AddressDto addressDto){
+        return new CourtHouseDto(
+            courtHouseId,
+            courtRoomId,
+            "CROWN",
+            "123",
+            "Lavender Hill",
+            addressDto,
+            Arrays.asList(courtRoomDto)
+        );
+    }
+
+    private HearingDto createHearing(String hearingType, List<CourtSittingDto> courtSittings){
+        return new HearingDto(
+            hearingId,
+            hearingType,
+            hearingType,
+            "Note1",
+            courtSittings
+        );
+    }
+
+    private HearingDto createHearing(String hearingId, String hearingType, List<CourtSittingDto> courtSittings){
+        return new HearingDto(
+            hearingId,
+            hearingType,
+            hearingType,
+            "Note1",
+            courtSittings
+        );
     }
 }
